# Assignment-2-Blockchain

./: README.md
Assignment 2/: package-lock.json  package.json
Assignment 2/contracts/: AIModelMarketplace.sol
Assignment 2/frontend/: app.js  index.html  style.css
Source Code/hello_world/: Cargo.toml
Source Code/hello_world/examples/: client.rs
Source Code/hello_world/src/: lib.rs
